--- a/css/main.css
+++ b/css/main.css
@@ -235,4 +235,225 @@ template {
 body {
   font-family: Roboto;
 }
+
+.container {
+  max-width: 1290px;
+  margin: 0 auto;
+}
+
+.btn {
+  font-family: "Inter";
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.header {
+  background: #000;
+  color: #fff;
+}
+.header_topLine {
+  padding: 10px 0 8px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.header_topLine--inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header_topLine a {
+  text-decoration: none;
+}
+.header_topLine--right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 19px;
+}
+.header_topLine--right a {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+}
+.header_topLine--right .header_topLine--addresses {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px;
+}
+.header_topLine--left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 19px;
+}
+.header_topLine--left .header_topLine--terms {
+  color: #919191;
+  font-weight: 300;
+  font-size: 15px;
+}
+.header_topLine--left .header_topLine--callMe {
+  font-weight: 500;
+  color: #fff;
+  font-size: 12px;
+  background: #95B544;
+  padding: 5px 8px;
+  text-transform: uppercase;
+}
+.header_middle {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 7px 0;
+}
+.header_middle--inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header_middle .header_middle--catalog .header_middle--btn {
+  background: #95B544;
+  padding: 10px 37px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  text-decoration: none;
+  color: #fff;
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger span {
+  display: block;
+  width: 22px;
+  height: 2px;
+  background: #fff;
+  border-radius: 2px;
+  margin-bottom: 6px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger span:last-child {
+  margin-bottom: 0;
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger.active span {
+  margin-bottom: 0;
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger.active span:nth-child(1) {
+  -webkit-transform: rotate(45deg) translateX(2px);
+          transform: rotate(45deg) translateX(2px);
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger.active span:nth-child(2) {
+  opacity: 0;
+}
+.header_middle .header_middle--catalog .header_middle--btn .burger.active span:nth-child(3) {
+  -webkit-transform: rotate(-45deg) translateX(2px);
+          transform: rotate(-45deg) translateX(2px);
+}
+.header_middle--btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 24px;
+}
+.header_middle--btns .header_middle--btn a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 44px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-weight: 300;
+  text-decoration: none;
+  font-size: 14px;
+}
+.header_nav {
+  padding: 6px 0;
+}
+.header_nav nav {
+  position: relative;
+}
+.header_nav .list-wrapper {
+  padding: 0px 37px;
+}
+.header_nav ul {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 0;
+}
+.header_nav ul li {
+  list-style: none;
+  padding: 0;
+  width: auto !important;
+}
+.header_nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 17px;
+  line-height: 20px;
+}
+.header_nav .swiper-button-next {
+  top: 0;
+  position: absolute;
+  right: 0;
+  width: 7px;
+  height: 16px;
+  margin-top: 0;
+}
+.header_nav .swiper-button-next::after {
+  content: "";
+  background: url("../img/nav-next.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 7px;
+  height: 16px;
+}
+.header_nav .swiper-button-prev {
+  top: 0;
+  position: absolute;
+  left: 0;
+  width: 7px;
+  height: 16px;
+  margin-top: 0;
+}
+.header_nav .swiper-button-prev::after {
+  content: "";
+  background: url("../img/nav-prev.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 7px;
+  height: 16px;
+}
 /*# sourceMappingURL=main.css.map */
