--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,9 @@
 @import "general";
 @import "blocks/header";
 @import "blocks/footer";
+
+@import "blocks/home/first-screen";
+@import "blocks/home/catalog";
+@import "blocks/home/advantages";
+
 @import "media";
