--- a/scss/var.scss
+++ b/scss/var.scss
@@ -1,10 +1,14 @@
 $black: #333333;
 $white: #fff;
+$main: #333333;
 $gray: #919191;;
 $accent: #95B544;
 
 @mixin medium {
   font-weight: 500;
+}
+@mixin regular {
+  font-weight: 400;
 }
 @mixin light {
   font-weight: 300;
