--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,7 +1,10 @@
 .header {
-  background: #000;
+  position: absolute;
+  top: 0;
+  z-index: 100;
+  width: 100%;
 
-  color: $white;
+  @include white;
 
   &_topLine {
     padding: 10px 0 8px;
