--- a/scss/general.scss
+++ b/scss/general.scss
@@ -5,6 +5,11 @@ body {
 .container {
   max-width: 1290px;
   margin: 0 auto;
+
+  &-fluid {
+    max-width: 100%;
+    padding: 0 30px;
+  }
 }
 
 .btn {
