Create new blocks

--- a/scss/var.scss
+++ b/scss/var.scss
@@ -22,6 +22,9 @@ $accent: #95B544;
 @mixin white {
   color: $white;
 }
+@mixin workshop {
+  font-family: "WORKSHOP Marker";
+}
 
 @mixin btn {
   font-family: 'Inter';
