--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,12 @@ template {
   display: none;
 }
 
+@font-face {
+  font-family: "WORKSHOP Marker";
+  src: local("WORKSHOP Marker"), local("WORKSHOP-Marker"), url("../fonts/WORKSHOP Marker.ttf") format("truetype"), url("../fonts/WORKSHOPMarker.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   font-family: Roboto;
 }
@@ -624,22 +630,13 @@ body {
   padding: 0 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-size: 28px;
+  font-size: 40px;
   display: none;
   -webkit-transform: translateY(-83px);
           transform: translateY(-83px);
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-.catalog_card .catalog_card--link a {
-  text-decoration: none;
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  font-family: "WORKSHOP Marker";
   gap: 15px;
 }
 
@@ -695,5 +692,223 @@ body {
   font-weight: 300;
   color: #919191;
   font-size: 16px;
+}
+
+.opt {
+  text-align: center;
+  background: url("../img/opt_bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 70px;
+  padding-bottom: 50px;
+  color: #fff;
+}
+.opt_title {
+  font-weight: 400;
+  font-size: 40px;
+  margin: 0 0 40px;
+}
+.opt_subtitle {
+  font-weight: 400;
+  font-size: 28px;
+  margin-bottom: 50px;
+}
+.opt .opt_steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 180px;
+  margin-bottom: 45px;
+}
+.opt .opt_steps .opt_step {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 22px;
+  position: relative;
+}
+.opt .opt_steps .opt_step .opt_step--number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 2px solid #FFFFFF;
+  border-radius: 100%;
+  width: 70px;
+  height: 70px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 40px;
+}
+.opt .opt_steps .opt_step .opt_step--text {
+  font-size: 20px;
+}
+.opt .opt_steps .opt_step::after {
+  content: "";
+  display: block;
+  background: url("../img/arrow_opt.svg");
+  width: 103px;
+  position: absolute;
+  top: 50%;
+  left: 190px;
+  height: 16px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.opt .opt_steps .opt_step:last-child:after {
+  display: none;
+}
+.opt .more {
+  font-family: "WORKSHOP Marker";
+  padding: 13px 40px;
+  font-size: 28px;
+  background: #95B544;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+.opt .more a {
+  text-decoration: none;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.articles {
+  margin-top: 85px;
+  margin-bottom: 85px;
+}
+.articles h2 {
+  font-weight: 400;
+  font-size: 40px;
+  text-align: center;
+  color: #333333;
+}
+.articles_inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 28px 1fr 28px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 28px;
+}
+.articles .article_card {
+  position: relative;
+}
+.articles .article_card .article_card--info {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 30px 20px;
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.4);
+  color: #fff;
+}
+.articles .article_card .article_card--image {
+  width: 100%;
+}
+.articles .article_card .article_card--title {
+  font-weight: 400;
+  margin: 0 0 10px;
+  font-size: 30px;
+}
+.articles .article_card .article_card--text {
+  font-size: 18px;
+  line-height: 140%;
+  margin: 0 0 20px;
+}
+.articles .article_card .article_card--link {
+  font-family: "WORKSHOP Marker";
+  font-size: 28px;
+  color: #95B544;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px;
+}
+.articles .article_big {
+  margin-top: 95px;
+}
+.articles .article_big .article_big--title {
+  margin: 0 0 50px;
+}
+.articles .article_big .article_big--text {
+  font-size: 20px;
+}
+.articles .article_big a {
+  font-size: 16px;
+  color: #95B544;
+  text-decoration: none;
+}
+
+.about {
+  background: url("../img/about_bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  padding: 50px 0 35px;
+  color: #fff;
+}
+.about .title {
+  font-size: 40px;
+  font-weight: 400;
+  margin: 0 0 35px;
+}
+.about .subtitle {
+  font-weight: 600;
+  font-size: 16px;
+  font-family: "Inter";
+  margin: 0 0 35px;
+}
+.about_inner {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 100px;
+  margin-bottom: 35px;
+}
+.about_inner iframe {
+  width: 100%;
+  height: 100%;
+  max-width: 337px;
+  max-height: 188px;
+}
+.about .about_social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+.about .about_social a {
+  text-decoration: none;
+  display: inline-block;
 }
 /*# sourceMappingURL=main.css.map */
