--- a/scss/blocks/home/catalog.scss
+++ b/scss/blocks/home/catalog.scss
@@ -55,18 +55,12 @@
       justify-content: center;
       padding: 0 20px;
       box-sizing: border-box;
-      font-size: 28px;
+      font-size: 40px;
       display: none;
       transform: translateY(-83px);
       transition: .5s;
-
-      a {
-        text-decoration: none;
-        @include white;
-        display: flex;
-        align-items: center;
-        gap: 15px;
-      }
+      @include workshop;
+      gap: 15px;
     }
   }
 }
