--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "normolize";
+@import "fonts";
 @import "var";
 @import "general";
 @import "blocks/header";
@@ -7,5 +8,8 @@
 @import "blocks/home/first-screen";
 @import "blocks/home/catalog";
 @import "blocks/home/advantages";
+@import "blocks/home/opt";
+@import "blocks/home/articles";
+@import "blocks/home/about";
 
 @import "media";
