Add partners slider and footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,5 +11,6 @@
 @import "blocks/home/opt";
 @import "blocks/home/articles";
 @import "blocks/home/about";
+@import "blocks/home/partners";
 
 @import "media";
