--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,86 @@ body {
   height: 16px;
 }
 
+.footer {
+  background: #95B544;
+  color: #fff;
+  font-size: 16px;
+}
+.footer_top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 50px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer_top ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.footer_top .footer_links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.footer_top .footer_links a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  display: block;
+  margin-top: 5px;
+}
+.footer_top .footer_social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 19.5px;
+}
+.footer_top .footer_social a {
+  height: 40px;
+  display: block;
+  text-decoration: none;
+}
+.footer_top .footer_title {
+  display: block;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.footer_top .footer_title--menu {
+  padding-left: 3.5px;
+}
+.footer_top .footer_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+}
+.footer_top .footer_menu a {
+  text-decoration: none;
+  color: #fff;
+}
+.footer p {
+  white-space: pre-line;
+  margin: 0;
+}
+.footer_bottom {
+  padding: 30px 0;
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
 .first_screen {
   color: #fff;
   text-align: center;
@@ -910,5 +990,59 @@ body {
 .about .about_social a {
   text-decoration: none;
   display: inline-block;
+}
+
+.partners {
+  margin-top: 80px;
+  margin-bottom: 90px;
+  text-align: center;
+}
+.partners__inner {
+  position: relative;
+  padding: 0 16px;
+}
+.partners .partners_swiper--inner {
+  padding: 20px;
+  border: 1px solid #E2E2E2;
+  border-radius: 5px;
+  background: #ffffff;
+}
+.partners h2 {
+  font-size: 40px;
+  font-weight: 400;
+  margin: 0 0 40px;
+}
+.partners_swiper .swiper-wrapper {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.partners .swiper-button-prev {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  left: -45px;
+}
+.partners .swiper-button-prev:after {
+  content: "";
+  display: block;
+  background: url("../img/partners-prev.svg") no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+.partners .swiper-button-next {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  right: -45px;
+}
+.partners .swiper-button-next:after {
+  content: "";
+  display: block;
+  background: url("../img/partners-next.svg") no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
