--- a/css/main.css
+++ b/css/main.css
@@ -342,6 +342,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.header_middle .header_middle--catalog {
+  position: relative;
+}
 .header_middle .header_middle--catalog .header_middle--btn {
   background: #95B544;
   padding: 10px 37px;
@@ -411,14 +414,13 @@ body {
   text-decoration: none;
   font-size: 14px;
 }
-.header_nav {
-  padding: 6px 0;
-}
 .header_nav nav {
-  position: relative;
+  padding-top: 6px;
+  margin-right: 37px;
+  margin-left: 37px;
 }
-.header_nav .list-wrapper {
-  padding: 0px 37px;
+.header_nav .container {
+  position: relative;
 }
 .header_nav ul {
   height: -webkit-fit-content;
@@ -429,7 +431,7 @@ body {
 .header_nav ul li {
   list-style: none;
   padding: 0;
-  width: auto !important;
+  text-align: center;
 }
 .header_nav ul li a {
   text-decoration: none;
@@ -438,7 +440,7 @@ body {
   line-height: 20px;
 }
 .header_nav .swiper-button-next {
-  top: 0;
+  top: 8px;
   position: absolute;
   right: 0;
   width: 7px;
@@ -454,7 +456,7 @@ body {
   height: 16px;
 }
 .header_nav .swiper-button-prev {
-  top: 0;
+  top: 8px;
   position: absolute;
   left: 0;
   width: 7px;
@@ -468,6 +470,173 @@ body {
   background-size: cover;
   width: 7px;
   height: 16px;
+}
+.header_catalog--menu {
+  position: absolute;
+  color: #333333;
+  z-index: 100;
+  display: none;
+}
+.header_catalog--menu.active {
+  display: block;
+}
+.header_catalog--menu .menu {
+  margin: 0;
+  padding: 4px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #fff;
+  -webkit-filter: drop-shadow(0px 16px 128px rgba(50, 50, 71, 0.24)) drop-shadow(0px 32px 188px rgba(50, 50, 71, 0.24));
+          filter: drop-shadow(0px 16px 128px rgba(50, 50, 71, 0.24)) drop-shadow(0px 32px 188px rgba(50, 50, 71, 0.24));
+  /*max-height: 690px;
+  overflow-y: auto;
+  overflow-x: hidden;*/
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.header_catalog--menu .menu::-webkit-scrollbar {
+  width: 3px;
+}
+.header_catalog--menu .menu::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.header_catalog--menu .menu::-webkit-scrollbar-thumb {
+  background: rgba(149, 181, 68, 0.5);
+}
+.header_catalog--menu .menu::-webkit-scrollbar-thumb:hover {
+  background: rgba(149, 181, 68, 0.2);
+}
+.header_catalog--menu .menu_item {
+  list-style: none;
+  position: relative;
+  padding: 12px 44px 12px 44px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  display: block;
+}
+.header_catalog--menu .menu_item:hover {
+  background: rgba(149, 181, 68, 0.2);
+}
+.header_catalog--menu .menu_item::before {
+  content: "";
+  background: url("../img/catalog-list.svg") no-repeat;
+  background-size: cover;
+  display: block;
+  position: absolute;
+  left: 22px;
+  width: 32px;
+  height: 32px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  top: 50%;
+}
+.header_catalog--menu .menu_item a {
+  color: #333333;
+  text-decoration: none;
+}
+.header_catalog--menu .menu_item--haveChild::after {
+  cursor: pointer;
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  top: 50%;
+  width: 24px;
+  height: 24px;
+  background: url("../img/catalog-arrow.svg") no-repeat;
+  background-size: cover;
+}
+.header_catalog--menu .menu_item--haveChild.active {
+  background: #95B544;
+}
+.header_catalog--menu .menu_item--haveChild.active a {
+  color: #fff;
+}
+.header_catalog--menu .menu_item--haveChild.active::before {
+  background: url("../img/catalog-list_white.svg") no-repeat;
+  background-size: cover;
+}
+.header_catalog--menu .menu_item--haveChild.active::after {
+  background: url("../img/catalog-arrow_white.svg") no-repeat;
+  background-size: cover;
+}
+.header_catalog--menu .menu_item--haveChild.active .submenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header_catalog--menu .submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  background: #fff;
+  z-index: 1000000;
+  color: #333333;
+  top: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px 30px 27px;
+  min-width: 896px;
+  -webkit-filter: drop-shadow(0px 12px 12px rgba(50, 50, 71, 0.08)) drop-shadow(0px 16px 24px rgba(50, 50, 71, 0.08));
+          filter: drop-shadow(0px 12px 12px rgba(50, 50, 71, 0.08)) drop-shadow(0px 16px 24px rgba(50, 50, 71, 0.08));
+  gap: 20px;
+}
+.header_catalog--menu .submenu .submenu_title {
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #95B544;
+}
+.header_catalog--menu .submenu .submenus {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-column-gap: 70px;
+     -moz-column-gap: 70px;
+          column-gap: 70px;
+}
+.header_catalog--menu .submenu ul {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.header_catalog--menu .submenu li {
+  list-style: none;
+}
+.header_catalog--menu .submenu li.submenu_item a {
+  color: #333333;
+  font-size: 15px;
+}
+.header_catalog--menu .submenu li.submenu_item a:hover {
+  color: #ED7E1E;
 }
 
 .footer {
