--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -68,6 +68,7 @@
     }
 
     .header_middle--catalog {
+      position: relative;
       .header_middle--btn {
         background: $accent;
         padding: 10px 37px;
@@ -137,19 +138,22 @@
 
   &_nav {
     nav {
+      padding-top: 6px;
+      margin-right: 37px;
+      margin-left: 37px;
+    }
+
+    .container {
       position: relative;
     }
-    padding: 6px 0;
-    .list-wrapper {
-      padding: 0px 37px;
-    }
+
     ul {
       height: fit-content;
       margin: 0;
       li {
         list-style: none;
         padding: 0;
-        width: auto !important;
+        text-align: center;
         a {
           text-decoration: none;
           @include white;
@@ -160,7 +164,7 @@
     }
 
     .swiper-button-next {
-      top: 0;
+      top: 8px;
       position: absolute;
       right: 0;
       width: 7px;
@@ -177,7 +181,7 @@
       }
     }
     .swiper-button-prev {
-      top: 0;
+      top: 8px;
       position: absolute;
       left: 0;
       width: 7px;
@@ -191,6 +195,166 @@
         background-size: cover;
         width: 7px;
         height: 16px;
+      }
+    }
+  }
+
+  &_catalog--menu {
+    position: absolute;
+    color: $black;
+    z-index: 100;
+    display: none;
+
+    &.active {
+      display: block;
+    }
+
+    .menu {
+      margin: 0;
+      padding: 4px 0;
+      display: flex;
+      gap: 2px;
+      flex-direction: column;
+      background: #fff;
+      filter: drop-shadow(0px 16px 128px rgba(50, 50, 71, 0.24)) drop-shadow(0px 32px 188px rgba(50, 50, 71, 0.24));
+      /*max-height: 690px;
+      overflow-y: auto;
+      overflow-x: hidden;*/
+      width: max-content;
+
+      &::-webkit-scrollbar {
+        width: 3px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: rgba(149, 181, 68, 0.5);
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: rgba(149, 181, 68, 0.2);
+      }
+    }
+
+    .menu_item {
+      list-style: none;
+      position: relative;
+      padding: 12px 44px 12px 44px;
+      user-select: none;
+      cursor: pointer;
+      display: block;
+
+      &:hover {
+        background: rgba(149, 181, 68, 0.2);
+      }
+
+      &::before {
+        content: "";
+        background: url("../img/catalog-list.svg") no-repeat;
+        background-size: cover;
+        display: block;
+        position: absolute;
+        left: 22px;
+        width: 32px;
+        height: 32px;
+        transform: translate(-50%, -50%);
+        top: 50%;
+      }
+
+      a {
+        color: $black;
+        text-decoration: none;
+      }
+
+      &--haveChild {
+        &::after {
+          cursor: pointer;
+          content: "";
+          display: block;
+          position: absolute;
+          right: 0;
+          transform: translate(-50%, -50%);
+          top: 50%;
+          width: 24px;
+          height: 24px;
+          background: url("../img/catalog-arrow.svg") no-repeat;
+          background-size: cover;
+        }
+
+        &.active {
+          background: $accent;
+          a {
+            @include white;
+          }
+
+          &::before {
+            background: url("../img/catalog-list_white.svg") no-repeat;
+            background-size: cover;
+          }
+
+          &::after {
+            background: url("../img/catalog-arrow_white.svg") no-repeat;
+            background-size: cover;
+          }
+
+          .submenu {
+            display: flex;
+          }
+        }
+      }
+    }
+
+    .submenu {
+      display: none;
+      position: absolute;
+      left: 100%;
+      background: #fff;
+      z-index: 1000000;
+      color: $black;
+      top: 0;
+      flex-direction: column;
+      padding: 20px 30px 27px;
+      min-width: 896px;
+      filter: drop-shadow(0px 12px 12px rgba(50, 50, 71, 0.08)) drop-shadow(0px 16px 24px rgba(50, 50, 71, 0.08));
+      gap: 20px;
+
+      .submenu_title {
+        @include medium;
+        font-size: 16px;
+        text-transform: uppercase;
+        color: $accent;
+      }
+
+      .submenus {
+        display: flex;
+        flex-direction: row;
+        column-gap: 70px;
+      }
+
+      ul {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: max-content;
+      }
+
+      li {
+        list-style: none;
+        &.submenu_item {
+          a {
+            color: $black;
+            font-size: 15px;
+
+            &:hover {
+              color: #ED7E1E;
+            }
+          }
+        }
       }
     }
   }
