--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "general";
 @import "blocks/header";
 @import "blocks/footer";
+@import "blocks/modals";
 
 @import "blocks/home/first-screen";
 @import "blocks/home/catalog";
